# tdemocracy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  genindex.html  index.html  listen.html  model.html  objects.inv  pyproject.toml  search.html  searchindex.js  selection.html  settings.html  tox.ini
.doctrees/: environment.pickle  index.doctree  listen.doctree  model.doctree  selection.doctree  settings.doctree
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: deploy-docs.yml  main.yml  on-release-main.yml
_images/: graphviz-1b44ac498511aefa8588302e3b9971c4a1c728db.png.map  graphviz-31f089861d33a632d9ed74a0564599577cdc9659.png.map
_modules/: index.html
_modules/tdemocracy/: listen.html  model.html  settings.html
_sources/: index.rst.txt  model.rst.txt  settings.rst.txt
docs/: conf.py  index.rst  listen.rst  model.rst  selection.rst
job_files/: nuclear_stream.yml
tdemocracy/: listen.py  model.py  monitor.html  monitor.py  settings.py
tests/: test_foo.py  test_listen.py  test_monitor.py
