[project]
name = "tdemocracy"
version = "0.0.4"
description = "Listen to nuclear alerts from the Vera Rubin Observatory for the TDEmocracy project"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Jannis Necker", email = "necker@strw.leidenuniv.nl" },
]
dependencies = [
    "hop-client (>=0.12.1,<0.13.0)",
    "py-avro-schema (>=3.8.2,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",

]

[project.urls]
Repository = "https://github.com/JannisNe/tdemocracy"
Documentation = "https://JannisNe.github.io/tdemocracy/"

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "types-pyyaml (>=6.0.12.20260518,<7.0.0.0)",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=1.25",
    "autodoc-pydantic[erdantic] (>=2.2.0,<3.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["tdemocracy"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
plugins = [
  "pydantic.mypy"
]
[[tool.mypy.overrides]]
module = [
    "hop.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["tdemocracy"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0"
sphinx-autodoc-typehints = ">=1.25"
erdantic = ">=0.3.0"
